--- a/src/SimpleCalc/SimpleCalc.form
+++ b/src/SimpleCalc/SimpleCalc.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SimpleCalc.SimpleCalcGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SimpleCalc.SimpleCalc">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -33,7 +33,7 @@
                   <text value="1st Number"/>
                 </properties>
               </component>
-              <component id="49a0e" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="49a0e" class="javax.swing.JTextField" binding="tfNumber1">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -41,6 +41,7 @@
                 </constraints>
                 <properties>
                   <font size="16"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
@@ -70,7 +71,7 @@
                   <text value="2nd Number"/>
                 </properties>
               </component>
-              <component id="c7d99" class="javax.swing.JTextField" default-binding="true">
+              <component id="c7d99" class="javax.swing.JTextField" binding="tfNumber2">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -99,7 +100,7 @@
                   <text value="Result"/>
                 </properties>
               </component>
-              <component id="36524" class="javax.swing.JTextField" default-binding="true">
+              <component id="36524" class="javax.swing.JTextField" binding="lblResult">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -141,7 +142,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="774fe" class="javax.swing.JButton" binding="computeResultButton" default-binding="true">
+          <component id="774fe" class="javax.swing.JButton" binding="btnCompute">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
